[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/Comfortaa/static/Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/win_scene.gd" type="Script" id=3]
[ext_resource path="res://assets/props/win_scene.png" type="Texture" id=4]
[ext_resource path="res://scenes/mother_ship.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 59
outline_color = Color( 0.027451, 0.141176, 0.584314, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[node name="win_scene" type="Node2D"]
script = ExtResource( 3 )
move_to = Vector2( 750, 340 )

[node name="Win" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 4 )

[node name="Ship_Anim" type="Node2D" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="Ship_Anim"]
position = Vector2( 69, 99 )
amount = 1506
lifetime = 23.09
speed_scale = 15.69
emission_shape = 1
emission_sphere_radius = 151.03
direction = Vector2( -1, 0 )
spread = 77.22
gravity = Vector2( -27.973, -3.571 )
initial_velocity = 23.89
scale_amount = 5.52
scale_amount_random = 1.0
color = Color( 0.0509804, 0.745098, 0.796078, 1 )

[node name="MotherShip" parent="Ship_Anim" instance=ExtResource( 5 )]
position = Vector2( -130, 60 )

[node name="After_anim" type="Node2D" parent="."]

[node name="Button" type="Button" parent="After_anim"]
modulate = Color( 0.0823529, 0.364706, 0.462745, 1 )
margin_left = 98.0
margin_top = 457.0
margin_right = 416.0
margin_bottom = 529.0
custom_fonts/font = SubResource( 1 )
text = "PlayAgain"

[node name="Time" type="Label" parent="After_anim"]
modulate = Color( 0.0901961, 0.427451, 0.482353, 1 )
margin_left = 102.0
margin_top = 393.0
margin_right = 235.0
margin_bottom = 439.0
custom_fonts/font = SubResource( 2 )

[connection signal="pressed" from="After_anim/Button" to="." method="_on_Button_pressed"]
